<resources>
    <string name="app_name">M2</string>
    <string name="headLight">前&#160;&#160;&#160;&#8201;灯:</string>
    <string name="backLight">后&#160;&#160;&#160;&#8201;灯:</string>
    <string name="ptzLight">云台灯:</string>
    <string name="moveSpeed">车体速度:</string>
    <string name="lihe_li">离合</string>
    <string name="jiguang">激光</string>
    <string name="lihe_shouxian">收线离合</string>
    <string name="shouxianSpeed">收线速度：</string>
    <string name="dianresi">电热丝</string>
    <string name="move_auto">自动巡航</string>
    <string name="str_speed">速度</string>
    <string name="str_ptz_light">云台灯</string>
    <string name="str_back_light">后灯</string>
    <string name="str_front_light">前灯</string>
    <string name="str_liju">力矩</string>
    <string name="str_shouxian">收线</string>
    <string name="str_fangxian">放线</string>
    <string name="auto_model">自动模式</string>
    <string name="str_record">录像</string>
    <string name="str_capture">截图</string>
    <string name="str_jimiqi">计米归零</string>
    <string name="str_picture">图片</string>
    <string name="str_play_back">回放</string>
    <string name="str_start_record_fail">开始录像失败！</string>
    <string name="str_start_record_success">开始录像成功！</string>
    <string name="str_stop_record_fail">停止录像失败！</string>
    <string name="str_close_app">关闭</string>
    <string name="str_quanxian_yes">有权限</string>
    <string name="str_device_battery">主机电量</string>
    <string name="str_terminal_battery">终端电量</string>
    <string name="str_setting">设置</string>
    <string name="str_quanxian_no">无权限</string>
    <string name="search">搜索</string>


    <string name="capture_guandao_id">管道号</string>
    <string name="capture_quexian_list">缺陷列表：</string>
    <string name="capture_quexian_style">类型</string>
    <string name="capture_quexian_name">缺陷名</string>
    <string name="capture_quexian_grade">等级</string>
    <string name="capture_quexian_distance">距离(m)</string>
    <string name="capture_quexian_clock">时钟表示</string>
    <string name="capture_quexian_length">长度(m)</string>
    <string name="defectShow">缺陷描述</string>
    <string name="playSpeed">播放速度:</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="isDeleteAllFile">是否删除？</string>
    <string name="isdeleteChooseFile">是否删除所有选中文件？</string>
    <string name="yes">是</string>
    <string name="no">否</string>
    <string name="isdelete">是否删除？</string>
    <string name="isdeleteFile">是否删除文件</string>
    <string name="exitingApp">正在退出程序！</string>
    <string name="exitAppSure">是否退出程序？</string>
    <string name="outStorage">外置存储</string>
    <string name="inStorage">本机存储</string>
    <string name="playVideoFalse">无法播放该视频！</string>
    <string name="isEditPicture">是否编辑图片？</string>
    <string name="edit">编辑</string>
    <string name="video">视频</string>
    <string name="capture_guandao_id_e">管道号:</string>
    <string name="add">添加</string>
    <string name="change">修改</string>
    <string name="delete">删除</string>
    <string name="please_choose_ont_from_list_first">请选择一个列表选项进行操作！</string>

    <string name="capture_quexian_style_e">类型:</string>
    <string name="capture_quexian_name_e">缺陷名:</string>
    <string name="capture_quexian_grade_e">等级:</string>
    <string name="capture_quexian_distance_e">距离(m):</string>
    <string name="capture_quexian_clock_e">时钟表示:</string>
    <string name="capture_quexian_length_e">长度(m):</string>
    <string name="capture_quexian_detail_e">描述：</string>
    <string name="example">时钟示例</string>
    <string name="chooseQuexianSort">请选择缺陷类型！</string>
    <string name="pleaseChoose">请选择</string>
    <string name="clear">清空</string>
    <string name="str_picture_edit">图片编辑</string>
    <string name="basic_setting">系统设置</string>
    <string name="set">设置</string>
    <string name="lightSetting">亮度设置</string>
    <string name="systemInfo">系统信息</string>
    <string name="see">查看</string>
    <string name="systemUpdate">系统升级</string>
    <string name="update">升级</string>
    <string name="connectAuto">自动连接</string>
    <string name="hardwareSetting">硬解码优先</string>
    <string name="saveToSdcard">存储到内存卡</string>
    <string name="name">名称</string>
    <string name="currentValue">当前值</string>
    <string name="minValue">最小值</string>
    <string name="maxValue">最大值</string>
    <string name="state">状态</string>
    <string name="baseSetting">基本设置</string>
    <string name="advanceSetting">高级设置</string>
    <string name="environmentCount">环境统计</string>
    <string name="xinghao">型号</string>
    <string name="version">版本号</string>
    <string name="shengchanPerson">生产商</string>
    <string name="myComputor">深圳市博铭维智能科技有限公司</string>
    <string name="robotName">Dolphin2</string>
    <string name="isUpdateApp">是否升级系统</string>
    <string name="updateAppAndClosePreview">升级将关闭当前程序！</string>
    <string name="noVersion">未知版本号</string>
    <string name="noOutSdcard">无可用外置存储设备</string>
    <string name="alarm">警告</string>
    <string name="sureSaveToSdcard">确定要将文件默认存储位置定为外置存储卡吗？</string>
    <string name="fileDeleteAfterAppDelete">2.软件卸载后，文件将被自动删除！</string>
    <string name="canMove">，且不支持移动！</string>
    <string name="fileSaveTo">1.文件存储位置固定为：</string>
    <string name="fileSaveDangerousIn4">受谷歌政策影响，4.4系统在使用二级存储卡时存在一定风险：</string>
    <string name="unit">单位</string>
    <string name="yali">压力</string>
    <string name="str_ptz_set_place">云台预置位</string>
    <string name="str_ptz_set_circle">转一圈</string>
    <string name="str_ptz_set_right">置位向右</string>
    <string name="str_ptz_set_left">置位向左</string>
    <string name="str_ptz_set_up">置位向上</string>
    <string name="str_zitai_gunjiao">姿态滚角:{roll}</string>
    <string name="str_lift_height">升降高度:{height}\n角度:{angle}</string>
    <string name="str_zitai_qingjiao">姿态倾角:{qing}</string>
    <string name="str_ptz_angle">云台径向角:{jing}\n轴向角:{zhou}</string>
    <string name="disconnect">未连接</string>
    <string name="ptzSpeed">云台速度</string>
    <string name="piLao_Testing">正在进行疲劳测试!</string>
    <string name="piLao_alarm">请勿进行其它操作！</string>


    <string name="record_miaoshu">抓拍-缺陷描述</string>
    <string name="record_task_id">任务编号</string>
    <string name="record_task_name">任务名称</string>
    <string name="record_task_place">检测地点</string>
    <string name="record_task_start">起始井号</string>
    <string name="record_task_end">结束井号</string>
    <string name="record_task_direction">检测方向</string>
    <string name="record_task_sort">管道类型</string>
    <string name="record_task_guancai">  管材</string>
    <string name="record_task_diameter">管径</string>
    <string name="record_task_pipeLength">管长</string>
    <string name="record_task_wellHeight">井高</string>
    <string name="record_task_computer">检测单位</string>
    <string name="record_task_people">检测员</string>

    <string name="record_task_id_e">任务编号:</string>
    <string name="record_task_name_e">任务名称:</string>
    <string name="record_task_place_e">检测地点:</string>
    <string name="record_task_start_e">起始井号:</string>
    <string name="record_task_end_e">结束井号:</string>
    <string name="record_task_direction_e">检测方向:</string>
    <string name="record_task_sort_e">管道类型:</string>
    <string name="record_task_guancai_e">管材:</string>
    <string name="record_task_diameter_e">管径(mm):</string>
    <string name="record_task_computer_e">检测单位:</string>
    <string name="record_task_people_e">检测员:</string>

    <string name="task_name_id">任务名称/编号:</string>
    <string name="task_date">日期:</string>
    <string name="task_well_start_end">起始井—结束井:</string>
    <string name="task_diameter">管径:</string>


    <string name="startRecord">开始录像</string>
    <string name="deleteAll">删除所有</string>
    <string name="startOption">起始项</string>
    <string name="lastOption">上一页</string>
    <string name="nextOption">下一页</string>
    <string name="endOption">结束项</string>
    <string name="record_title">添加录像版头</string>
    <string name="record_title_edit">编辑录像版头</string>
    <string name="record_continue">录像继续！</string>
    <string name="recording">录像</string>
    <string name="str_biaozhu">标记</string>
    <string name="updateDeviceApplication">底层程序升级</string>
    <string name="DeviceVersionCurrent">当前版本:</string>
    <string name="send">开始更新</string>
    <string name="cancelUpdate">取消更新</string>


</resources>
