<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="5dp">

        <LinearLayout
            android:id="@+id/environment_dialog_topMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">
            <TextView
                style="@style/textSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/name" />

            <TextView
                style="@style/textSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/unit" />

            <TextView
                style="@style/textSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/minValue" />
            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_gravity="center" />
            <TextView
                style="@style/textSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/maxValue" />

            <TextView
                style="@style/textSet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="     " />
        </LinearLayout>

        <LinearLayout
            android:layout_below="@+id/environment_dialog_topMenu"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_weight="1"
            android:orientation="horizontal"
            android:gravity="center">
            <TextView
                android:id="@+id/dialog_name"
                style="@style/textSet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="@string/yali" />

            <TextView
                android:id="@+id/dialog_unit"
                style="@style/textSet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:paddingLeft="10dp"
                android:text="PSI" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/dialog_min"
                    style="@style/textSet"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_dialog_editext"
                    android:textCursorDrawable="@color/colorBase"
                    android:gravity="center" />
            </LinearLayout>

            <View
                android:layout_width="20dp"
                android:layout_height="2dp"
                android:layout_gravity="center"
                android:background="@color/colorBase" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/dialog_max"
                    style="@style/textSet"
                    android:layout_width="80dp"
                    android:layout_height="40dp"
                    android:background="@drawable/bg_dialog_editext"
                    android:inputType="number"
                    android:textCursorDrawable="@color/colorBase"
                    android:gravity="center" />
            </LinearLayout>

            <TextView
                android:id="@+id/dialog_set"
                style="@style/textSet"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:clickable="true"
                android:background="@drawable/bg_img_btn"
                android:text="@string/set" />
        </LinearLayout>
</RelativeLayout>