<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background"
    android:orientation="vertical"
    android:paddingBottom="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/title"
            style="@style/textSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:text="@string/updateDeviceApplication" />

        <TextView
            android:id="@+id/tv_update_version"
            style="@style/textSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="10dp"
            android:layout_marginTop="5dp" />

        <TextView
            style="@style/textSet"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:layout_toLeftOf="@id/tv_update_version"
            android:text="@string/DeviceVersionCurrent" />

    </RelativeLayout>

    <View
        android:id="@+id/fengexianl"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="5dp"
        android:background="@color/colorview" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/textSet"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:padding="10dp"
            android:text="更新对象" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

            <Spinner
                style="@style/textSet"
                android:id="@+id/sp_update_object"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"
                android:layout_marginLeft="15dp"
                android:gravity="center"
                android:entries="@array/update_object"
                android:theme="@style/SpnStyle"/>

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:enabled="false"
        android:id="@+id/tv_update_sure"
        style="@style/textSet"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:background="@drawable/bg_btn_base"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/send"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/tv_update_cancel"
        style="@style/textSet"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_btn_base"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/cancel"
        android:textColor="@color/white" />

</LinearLayout>
