<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal"
    android:gravity="center">

    <LinearLayout
        android:layout_width="@dimen/cit_width_long"
        android:layout_height="@dimen/cit_width"
        android:padding="5dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_battery_terminal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_s"
                android:gravity="center"
                android:text="0%"
                android:background="@drawable/ic_battery_0"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorBase"
            android:textSize="@dimen/text_size_s"
            android:text="@string/str_terminal_battery"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/cit_width_long"
        android:layout_height="@dimen/cit_width"
        android:padding="5dp"
        android:orientation="vertical">
        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1">
            <TextView
                android:id="@+id/tv_battery_device"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_s"
                android:gravity="center"
                android:text="0%"
                android:background="@drawable/ic_battery_0"/>
        </FrameLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/colorBase"
            android:textSize="@dimen/text_size_s"
            android:text="@string/str_device_battery"/>
    </LinearLayout>


    <com.bmw.m2.views.view.CompositeImageText
        android:id="@+id/cit_close_app"
        app:imgImage="@drawable/ic_power_switch_1"
        app:textString="@string/str_close_app"
        style="@style/style_top_menu_cit_style"/>

</LinearLayout>