<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="@dimen/shouxian_width"
    android:layout_height="@dimen/shouxian_height"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="10dp"
    android:background="@drawable/bg_front_sufaceview">
    <RelativeLayout
        android:id="@+id/rl_shouxian_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_shouxian_speed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_speed"
            android:textSize="@dimen/text_size_s"
            android:textColor="@color/colorBase"
            android:padding="@dimen/preview_lightControl_padding"
            android:layout_centerVertical="true"/>
        <SeekBar
            android:id="@+id/sb_shouxian_speed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.SeekBar.Normal"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_shouxian_speed"
            android:paddingTop="@dimen/preview_lightControl_seekbar_padding"
            android:paddingBottom="@dimen/preview_lightControl_seekbar_padding"
            android:max="10"/>

    </RelativeLayout>
    <RelativeLayout
        android:layout_below="@id/rl_shouxian_speed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_shouxian_liju"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/str_liju"
            android:textSize="@dimen/text_size_s"
            android:textColor="@color/colorBase"
            android:padding="@dimen/preview_lightControl_padding"
            android:layout_centerVertical="true"/>
        <SeekBar
            android:id="@+id/sb_shouxian_liju"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.SeekBar.Normal"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tv_shouxian_liju"
            android:paddingTop="@dimen/preview_lightControl_seekbar_padding"
            android:paddingBottom="@dimen/preview_lightControl_seekbar_padding"
            android:max="10"/>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_shouxian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/bg_btn_base"
        android:padding="5dp">
        <ImageView
            android:layout_width="@dimen/shouxian_btn_width"
            android:layout_height="@dimen/shouxian_btn_height"
            android:src="@drawable/ic_file_download_black_24dp"
            android:padding="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/str_shouxian"
            android:textSize="@dimen/text_size_ss"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_fangxian"
        android:layout_toRightOf="@id/ll_shouxian"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginLeft="10dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/bg_btn_base"
        android:padding="5dp">
        <ImageView
            android:layout_width="@dimen/shouxian_btn_width"
            android:layout_height="@dimen/shouxian_btn_height"
            android:src="@drawable/ic_file_upload_black_24dp"
            android:padding="2dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:text="@string/str_fangxian"
            android:textSize="@dimen/text_size_ss"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="5dp">
        <Switch
            android:id="@+id/sw_auto_model"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorBase"
            android:text="@string/auto_model"
            android:textSize="@dimen/text_size_ss"/>
    </LinearLayout>


</RelativeLayout>